# cinematch

./: README.md
backend/: .coverage  .env.example  README.MD  cinematch.db  init_db.py  pyproject.toml  setup.py  test.db
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: matches.py  movies.py  swipe.py  swipes.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  crud_match.py  crud_swipe.py  crud_user.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  swipe.py  user.py
backend/app/schemas/: __init__.py  movie.py  swipe.py  user.py
backend/app/services/: tmdb.py
backend/core/: config.py  security.py
backend/docs/: GUIA_ESTUDO.md
backend/tests/: conftest.py  test_api.py
