[tool.poetry]
name = "cinematch-backend"
version = "0.1.0"
description = "Backend do projeto CineMatch"
authors = ["Brennda Caitano <bcaethano21@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}] 

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
pydantic = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.13.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

